styles/_landing.scss
.landing {
	background-color: $blue;
	height: 100%;
	margin-top: 0;
}

.sk-circle {
	margin: auto;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
	height: 100px;
	width: 100px;
}

.site-nav {
	height: 100%;
	left: 0;
	pointer-events: none;
	position: absolute;
	top: 0;
	width: 100%;
	z-index: 2;
}

.site-nav-item {
	display: block;
	height: 16.66%;
	pointer-events: visible;
	position: relative;
	transition: all 1s ease;
	width: 2.5%;
	z-index: 90;
}

.site-nav-item:first-child {
	background-color: $pink;
}

.site-nav-item:nth-child(2) {
	background-color: $orange;
	width: 100%;
}

.site-nav-item:nth-child(3) {
	background-color: $green;
}

.site-nav-item:nth-child(4) {
	background-color: $purple;
}

.site-nav-item:nth-child(5) {
	background-color: $red;
}

.site-nav-item:nth-child(6) {
	background-color: $blue;
}

.site-nav-item:hover {
	transition: all .3s ease;
	width: 100%;
}

.site-nav-item-sources,
.site-nav-item-filter {
	height: 100%;
}

.site-nav-item-search {	
	margin-left: 25%;
	top: 50%;
	opacity: 0;
	padding: 1%;
	position: absolute;
	text-align: center;
	transition: opacity .3s linear;
	transform: translateY(-50%);
	width: 50%;
}

.site-nav-item-search-heading {
	font-size: 1.7vw;
	color: white;
	top: 50%;
	position: absolute;
	left: 15%;
	transform: translateY(-50%);
}

.site-nav-item-search h3 {
	font-size: 1.2em;
}

.site-nav-item-search input {
	border: none;
	border-radius: 5px;
	font-size: 1.3em;
	margin-top: .7em;
	padding: .3em;
	width: 70%;
}

.site-nav-item-search-submit {
	background-color: rgb(50,50,50);
	border: none;
	border-radius: 5px;
	color: white;
	font-size: 1.325em;
	padding: .3em;
	vertical-align: bottom;
	transition: all .2s linear;
	width: 20%;
}

.site-nav-item-search-submit:hover {
	background-color: black;
	cursor: pointer;
}

.site-nav-item:first-child:hover .site-nav-item-search {
	opacity: 1;
}

.site-nav-item .fa-close {
	float: right;
	font-size: 1.5em;
	margin-right: 1%;
	margin-top: .5%;
}

.site-nav-item .fa-close:hover {
	cursor: pointer;
}

.site-nav-item-branding {
	@include span-columns(4);
	@include shift(.5);
	display: inline-block;
	font-size: 1.9vw;
	position: relative;
	text-align: center;
	top: 50%;
	transform: translateY(-50%);
}

.fa-graduation-cap {
	float: left;
	margin-top: 4%;
}

.site-nav-item-branding-text {
	color: white;
	font-size: 1.8em;
	font-weight: 100;
}

.site-nav-item-description {
	@include span-columns(6);
	border-left: 1px solid white;
	font-size: 3.5vw;
	line-height: .7em;
	padding-left: 2%;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
}

.site-nav-item-description p:first-child {
	font-weight: 100;
}

.site-nav-item-description p:last-child {
	font-weight: 100;
}

.site-nav-item:nth-child(3) {
	text-align: center;
}

.site-nav-item-sources-heading {
	font-size: 1.7vw;
	color: white;
	top: 50%;
	position: absolute;
	left: 15%;
	transform: translateY(-50%);
}

.site-nav-item-sources {
	color: white;
	font-size: 1.2em;
	font-weight: 100;
	padding-top: 1em;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
	opacity: 0;
	transition: opacity .5s linear;
}

.site-nav-item-sources-text {
	margin-bottom: 1em;
}

.site-nav-item:nth-child(3):hover .site-nav-item-sources {
	opacity: 1;
}

.site-nav-item-sources-item {
	display: inline-block;
}

.site-nav-item-filter .fa-arrows-h:hover {
	cursor: pointer;
}

.site-nav-item-filter {
	color: white;
	font-size: 1.2em;
	font-weight: 100;
	margin: auto;
	opacity: 0;
	padding: 2% 0;
	text-align: center;
	position: relative;
	top: 50%;
	transition: opacity .1s linear;
	transform: translateY(-50%);
	width: 80%;
}

.site-nav-item-filter-heading {
	font-size: 1.7vw;
	color: white;
	top: 50%;
	position: absolute;
	left: 15%;
	transform: translateY(-50%);
}

.site-nav-item:nth-child(4):hover .site-nav-item-filter {
	opacity: 1;
	transition: opacity 1.5s linear;
}

.site-nav-item:nth-child(4):hover .site-nav-item-filter-heading {
	opacity: 0;
}

.site-nav-item-filter input {
	border: none;
	border-radius: 3px;
	font-size: 1em;
	margin-bottom: 1em;
	padding-left: .3em;
	width: 5%;
}

.site-nav-item-filter .filter-price-min-input,
.site-nav-item-filter .filter-price-max-input,
.site-nav-item-filter .filter-sqft-min-input,
.site-nav-item-filter .filter-sqft-max-input {
	width: 10%;
}

.filter-cancel,
.filter-submit {
	background-color: rgb(50,50,50);
	border: none;
	border-radius: 5px;
	color: white;
	font-size: 1.2em;
	transition: all .3s linear;
	width: 15%;
}

.filter-cancel:hover,
.filter-submit:hover {
	background-color: black;
	cursor: pointer;
}

.login {
	font-size: 1.2em;
	height: 90%;
	margin: auto;
	opacity: 0;
	text-align: center;
	transition: opacity .3s linear;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
	width: 30%;
}

.site-nav-item-login-heading {
	font-size: 1.7vw;
	color: white;
	top: 50%;
	position: absolute;
	left: 15%;
	transform: translateY(-50%);
}

.site-nav-item:nth-child(5):hover .login {
	opacity: 1;
}

.login-heading {
	color: white;
	font-weight: 200;
	margin-bottom: 5px;
}

.login input {
	border: none;
	display: block;
	font-size: 1em;
	margin: 1px auto;
	width: 80%;
}

.login-submit {
	background-color: white;
	border: none;
	color: $red;
	font-size: 1em;
	margin: auto;
	width: 80%;
}

.login-submit:hover {
	color: $blue;
	cursor: pointer;
}

.register {
	font-size: 1.2em;
	height: 100%;
	margin: auto;
	opacity: 0;
	padding-top: .5%;
	text-align: center;
	transition: opacity .3s linear;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
	width: 40%;
}

.site-nav-item-register-heading {
	font-size: 1.7vw;
	color: white;
	top: 50%;
	position: absolute;
	left: 15%;
	transform: translateY(-50%);
}

.site-nav-item:nth-child(6):hover .register {
	opacity: 1;
}

.register-heading {
	color: white;
	font-weight: 200;
	margin-bottom: 5px;
}

.register input {
	border: none;
	font-size: 1em;
	margin: 1px auto;
	padding: .2em;
	width: 40%;
}

.register-submit {
	background-color: white;
	border: none;
	color: $blue;
	font-size: 1.2em;
	margin: 1px auto;
	padding: .05em;
	transition: all .2s linear;
	vertical-align: bottom;
	width: 40%;
}

.register-submit:hover {
	background-color: white;
	color: $red;
	cursor: pointer;
}

.screen {
	background-color: rgba(0,0,0,.4);
	height: 100%;
	left: 0;
	pointer-events: visible;
	position: absolute;
	top: 0;
	width: 100%;
	z-index: 99;
}

.popup {
	background-color: rgba(250,250,250,.9);
	border-radius: 5px;
	position: fixed;
	height: 70%;
	left: 35%;
	pointer-events: visible;
	top: 15%;
	width: 30%;
	z-index: 100;
}

.popup .fa-close {
	float: right;
	font-size: 1.5em;
	margin-right: 3%;
	margin-top: 2%;
}

.popup .fa-close:hover {
	cursor: pointer;
}

.popup h3,
.popup h4,
.popup p {
	margin-bottom: .2em;
	margin-left: 15%;
	max-width: 70%;
}

.popup-address {
	font-size: 1.3em;
	margin-top: 2em;
}

.popup-price,
.popup p {
	margin-bottom: .2em;
}

.popup-image {
	margin-left: 15%;
	margin-top: 1em;
	max-width: 70%;
}

.popup-more {
	background-color: $blue;
	border: none;
	border-radius: 3px;
	color: white;
	font-size: 1.2em;
	margin-left: 30%;
	margin-top: 2em;
	padding: .2em;
	text-decoration: none;
	transition: all .2s linear;
	width: 40%;	
}

.popup-more:hover {
	background-color: rgba(12, 116, 202,.9);
	cursor: pointer;
}

.overlay {
	background-color: $blue;
	border-radius: 3px;
	color: white;
	font-size: 1.2em;
	padding: .4em;
	pointer-events: visible;
	position: relative;
	text-align: center;
	transition: all .1s linear;
	z-index: 100;
}

